Bug 269453 - [threaded-animation-resolution] animating `filter: drop-shadow()` crashes the UIProcess
Summary: [threaded-animation-resolution] animating `filter: drop-shadow()` crashes the...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on:
Blocks: 250970
  Show dependency treegraph
 
Reported: 2024-02-15 02:34 PST by Antoine Quint
Modified: 2024-02-15 13:22 PST (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2024-02-15 02:34:15 PST
There is a small but significant error in the way we address CAPresentationModifier for `filter: drop-shadow()` that yields an exception and a subsequent crash.
Comment 1 Antoine Quint 2024-02-15 02:37:26 PST
Pull request: https://github.com/WebKit/WebKit/pull/24501
Comment 2 EWS 2024-02-15 13:21:27 PST
Committed 274759@main (19bafb54016f): <https://commits.webkit.org/274759@main>

Reviewed commits have been landed. Closing PR #24501 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2024-02-15 13:22:20 PST
<rdar://problem/123032391>