[threaded-animation-resolution] animating `filter: drop-shadow()` crashes the UIProcess https://bugs.webkit.org/show_bug.cgi?id=269453

Reviewed by Dean Jackson.

We need to increase the presentation modifier list index prior to accessing the next
modifier when we're dealing with a `drop-shadow()` operation, otherwise we'd access
the `shadowOffset` presentation modifier to set the `shadowColor`, which of course
would lead an incorrect result, but more importantly yields an exception because
of mismatching value types.

* Source/WebCore/platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm:
(WebCore::PlatformCAFilters::updatePresentationModifiers):

Canonical link: https://commits.webkit.org/274759@main